<resources>
    <string name="app_name">Deeploft</string>
    <string name="send_message">Send Message</string>
    <string name="total_balance">Total Balance</string>
    <string name="available_payout">Available for payout: $%1$s</string>
    <string name="analytics">Analytics</string>
    <string name="students">Students</string>
    <string name="history">History</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="edit_profile_pic">Edit profile picture</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="my_certificates">My Certificates</string>
    <string name="student_progress_title">Student Progress</string>
    <string name="my_conversations_title">My Conversations</string>
    <string name="app_logo_desc">DeepLoft App Logo</string>
</resources>